--- a/formm.html
+++ b/formm.html
@@ -5,15 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+ 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
+     <!-- firebase link -->
+     <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-app-compat.min.js"
+     integrity="sha512-MMTxQovZQ+k7pTSxWbDc0g/5hMB9RDFFMj0wgSQz1+NXwV/T56YFmDkYkuBqEh9WfSw0dNX6g/rsNcLy870oFA=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
+
+   <!-- firebase auth link -->
+   <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-auth-compat.min.js"
+     integrity="sha512-lMP2iMXZtq9hwmVBL8Yd7oqr9ECfT0Oa363/FjW8XZKoTC11kxTeFpmp0mYoFcph0yAy5WvvlqwldgwlUPjv6g=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
+
+   <!-- firebase databse link -->
+   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+   <style>
+     @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap");
+   </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="background-color: rgb(182, 227, 236);">
         <div class="card text-left" style="width: 40rem">
           <div class="card-body">
             <h1 class="card-title"><img src="logo.png" alt="" width="70" height="80">FORM</h1>
@@ -64,12 +87,13 @@
                 onclick="insert_data()"
                 class="btn btn-lg btn-primary"
               >
-                 Submit
+                 Book
               </button>
             </form>
           </div>
         </div>
       </div>
+      <script src="data.js"></script>
       <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
