--- a/art.html
+++ b/art.html
@@ -2,7 +2,7 @@
 <html>
     <body>
     <div class="container">
-        <h1 style="color: white; background-color:  #5e2a2a;"><center> ABOUT US</center></h1>
+        <h1 style="color: white; background-color:  #5e2a2a;"><center> ARTICLES</center></h1>
   <h2> Dealing with Anxiety Attacks</h2>
   <p>Panic becomes a disorder when panic attacks are frequent and interfere with a normal lifestyle. More specifically, the DSM-5 describes the criteria for panic disorder as panic attacks that must be associated with longer than 1 month of subsequent persistent worry about: (1) having another attack or consequences of the attack, or (2) significant maladaptive behavioral changes related to the attack.
 To make the diagnosis of panic disorder, panic attacks cannot directly or physiologically result from substance use (intoxication or withdrawal), medical conditions, or another psychiatric disorder. Other symptoms or signs may include headache, cold hands, diarrhea, insomnia, fatigue, intrusive thoughts, and ruminations.[1]
