--- a/client.html
+++ b/client.html
@@ -52,6 +52,7 @@
                 <a
                   class="nav-link"
                   href="index.html"
+                  onclick="signOut()"
                   >LOGOUT</a
                 >
               </li>
