--- a/client.html
+++ b/client.html
@@ -15,6 +15,31 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+     <!-- firebase link -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-app-compat.min.js"
+      integrity="sha512-MMTxQovZQ+k7pTSxWbDc0g/5hMB9RDFFMj0wgSQz1+NXwV/T56YFmDkYkuBqEh9WfSw0dNX6g/rsNcLy870oFA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- firebase auth link -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-auth-compat.min.js"
+      integrity="sha512-lMP2iMXZtq9hwmVBL8Yd7oqr9ECfT0Oa363/FjW8XZKoTC11kxTeFpmp0mYoFcph0yAy5WvvlqwldgwlUPjv6g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- firebase databse link -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="firebase.js"></script>
   </head>
 
