--- a/about us.html
+++ b/about us.html
@@ -16,6 +16,12 @@
     <div class="container">
         <h1 style="color: white; background-color:  #5e2a2a;"><center> ABOUT US</center></h1>
         <div class="row">
+            <div class="col">
+          <img src="MH.jpg" alt="" class="img-thumbnail rounded " width="450">
+        </div>
+        <div class="col">
+          <img src="minds.jpg" alt="" class="img-thumbnail rounded " width="450">
+        </div>
         </div>
     <p>
         In all human history, we have never lived better in terms of creature comforts, medical care,
