--- a/client.html
+++ b/client.html
@@ -16,20 +16,20 @@
       crossorigin="anonymous"
     />
      <!-- firebase link -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-app-compat.min.js"
-      integrity="sha512-MMTxQovZQ+k7pTSxWbDc0g/5hMB9RDFFMj0wgSQz1+NXwV/T56YFmDkYkuBqEh9WfSw0dNX6g/rsNcLy870oFA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+     <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-app-compat.min.js"
+     integrity="sha512-MMTxQovZQ+k7pTSxWbDc0g/5hMB9RDFFMj0wgSQz1+NXwV/T56YFmDkYkuBqEh9WfSw0dNX6g/rsNcLy870oFA=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
 
-    <!-- firebase auth link -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-auth-compat.min.js"
-      integrity="sha512-lMP2iMXZtq9hwmVBL8Yd7oqr9ECfT0Oa363/FjW8XZKoTC11kxTeFpmp0mYoFcph0yAy5WvvlqwldgwlUPjv6g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+   <!-- firebase auth link -->
+   <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.8.1/firebase-auth-compat.min.js"
+     integrity="sha512-lMP2iMXZtq9hwmVBL8Yd7oqr9ECfT0Oa363/FjW8XZKoTC11kxTeFpmp0mYoFcph0yAy5WvvlqwldgwlUPjv6g=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
 
    <!-- firebase databse link -->
    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
@@ -57,7 +57,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="art.html">ARTICLES</a>
               </li>
               <li class="nav-item">
@@ -70,12 +70,7 @@
                 <a class="nav-link" href="test.html">TESTIMONIALS</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="index.html"
-                  onclick="signOut()"
-                  >LOGOUT</a
-                >
+                <a class="nav-link" href="javascript:void(0)" onclick="signOut()">LOGOUT</a>
               </li>
             </ul>
           </div>
