--- a/about us.html
+++ b/about us.html
@@ -12,18 +12,14 @@
     />
     <title>ABOUT us</title>
 </head>
-<body>
-    <div class="container">
-        <h1 style="color: white; background-color:  #5e2a2a;"><center> ABOUT US</center></h1>
-        <div class="row">
-            <div class="col">
-          <img src="MH.jpg" alt="" class="img-thumbnail rounded " width="450">
-        </div>
-        <div class="col">
-          <img src="minds.jpg" alt="" class="img-thumbnail rounded " width="450">
-        </div>
-        </div>
-    <p>
+<body style="background-image: url('heeling.webp'); background-size:cover">
+  <h1 style="color: white; background-color:  #5e2a2a;"><center><img src="logo.png" alt="" width="70" height="80"> ABOUT US</center></h1>
+  <div class="row">
+  <div class="col" >
+  <div class="card rounded" style="width: 30rem; background-color: rgb(73, 111, 143);">
+    <img src="mentalhealth.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text" style="color:beige">
         In all human history, we have never lived better in terms of creature comforts, medical care,
       connectivity tools, human rights, and world peace.
      Our flight or fight mechanisms and tribal orientation evolved to survive the Savannah – not the
@@ -31,21 +27,39 @@
      therapist from the comfort of your home. We want to optimize for enhanced mental well-being for
      a maximum number of people.
     </p>
-    <p>
-     I am currently a licensed psychologist, and a member of the Indian Psychological Association,
-     and the National Register of Health Service Psychologists. After completing my medical degree I
-     attained a Masters's in Professional Counseling from All India Institute Of Medical Sciences,
-     Delhi. Later I spent 5 years studying at Walden University, USA, and completed my Ph.D. in
-     Health Psychology.
-     </p>
-     <p>
-     I have taught multiple psychology courses and have practiced in clinical psychology, psychology
-     of physical medicine, and rehabilitation for thirty years. I treated numerous patients in private
-     settings, hospitals, and outpatient clinics during that time. I draw on a variety of evidence-based
-     methods to tailor and individualize treatment based on each client’s needs. I have a warm and
-     compassionate style in relating to my clients, while also encouraging and empowering them to
-     work towards their goals of building a ‘life worth living.
-    </p>
+    </div>
+  </div>
+  </div>
+  <div class="col" >
+  <div class="card rounded" style="width: 30rem; background-color: rgb(73, 111, 143);">
+    <img src="DOC.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text"  style="color:beige">
+        I am currently a licensed psychologist, and a member of the Indian Psychological Association,
+        and the National Register of Health Service Psychologists. After completing my medical degree I
+        attained a Masters's in Professional Counseling from All India Institute Of Medical Sciences,
+        Delhi. Later I spent 5 years studying at Walden University, USA, and completed my Ph.D. in
+        Health Psychology.
+      </p>
+    </div>
+  </div>
+  </div>
+  <div class="col">
+  <div class="card rounded" style="width: 30rem; background-color: rgb(73, 111, 143);">
+    <img src="minds.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text"  style="color:beige">
+        I have taught multiple psychology courses and have practiced in clinical psychology, psychology
+        of physical medicine, and rehabilitation for thirty years. I treated numerous patients in private
+        settings, hospitals, and outpatient clinics during that time. I draw on a variety of evidence-based
+        methods to tailor and individualize treatment based on each client’s needs. I have a warm and
+        compassionate style in relating to my clients, while also encouraging and empowering them to
+        work towards their goals of building a life worth living.
+       </p>
+    </div>
+  </div>
+  </div>
+</div>
 </body>
 <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
