--- a/test.html
+++ b/test.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-        crossorigin="anonymous"
-      />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+      <title>Bootstrap Example</title>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
-    <body>
-            <h1 style="color: white; background-color:  #5e2a2a;"><center>TESTIMONIALS </center></h1>
+    <body style="background-image:url('heeling.webp'); background-size:cover;">
+            <h1 style="color: white; background-color:  #012726;"><center>TESTIMONIALS </center></h1>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
@@ -19,7 +17,7 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    Therapy with Felicity gave me a new lease on life. I was at the point of ending things & within 21 days, I felt like I got my life back. I am so grateful for the timely help and unconditional support from Felicity.
+                  I had a recent breakup and was really devastated with that thing. It was a 6 year old relationship which ended and every day was becoming hell as I was not able to control my emotions. So many negative thoughts and negative antipication about the future started. I was not able to come out of it in any possible way.I searched for online help and took the therapy from manastha.com for the first time. It was really my first try at counseling and to my surprise it really did help me to move on in a healthy way. My counsellor guided me about so many things and I realized many more insights about my past and present. I took 7 sessions only and now I am  manifesting a more beautiful relationship
                 </div>
               </div>
             </div>
@@ -31,26 +29,11 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    I had a recent breakup and was really devastated with that thing. It was a 6 year old relationship which ended and every day was becoming hell as I was not able to control my emotions. So many negative thoughts and negative antipication about the future started. I was not able to come out of it in any possible way.I searched for online help and took the therapy from manastha.com for the first time. It was really my first try at counseling and to my surprise it really did help me to move on in a healthy way. My counsellor guided me about so many things and I realized many more insights about my past and present. I took 7 sessions only and now I am  manifesting a more beautiful relationship
+                  Therapy with Felicity gave me a new lease on life. I was at the point of ending things & within 21 days, I felt like I got my life back. I am so grateful for the timely help and unconditional support from Felicity.
                 </div>
               </div>
             </div>
         </div>
 
     </body>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"
-  ></script>
   </html>
