--- a/client.html
+++ b/client.html
@@ -58,19 +58,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="art.html">ARTICLES</a>
+                <a class="nav-link" style="font-size:20px" href="art.html">ARTICLES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formm.html">BOOK SESSION</a>
+                <a class="nav-link" style="font-size:20px" href="formm.html">BOOK SESSION</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about us.html">ABOUT US</a>
+                <a class="nav-link" style="font-size:20px" href="about us.html">ABOUT US</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="test.html">TESTIMONIALS</a>
+                <a class="nav-link" style="font-size:20px" href="test.html">TESTIMONIALS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)" onclick="signOut()">LOGOUT</a>
+                <a class="nav-link" style="font-size:20px" href="javascript:void(0)" onclick="signOut()">LOGOUT</a>
               </li>
             </ul>
           </div>
