--- a/formm.html
+++ b/formm.html
@@ -82,6 +82,13 @@
                   I am comfortable with both
                 </label>
               </div>
+                  <button
+                type="button"
+                onclick="window.open('client.html')"
+                class="btn btn-lg btn-secondary"
+              >
+                 Back
+              </button>
               <button
                 type="button"
                 onclick="insert_data()"
