--- a/formm.html
+++ b/formm.html
@@ -36,7 +36,7 @@
    </style>
 </head>
 <body>
-    <div class="container" style="background-color: rgb(182, 227, 236);">
+    <div style="background-color: rgb(182, 227, 236);">
         <div class="card text-center">
           <div class="card-body">
             <h1 class="card-title"><img src="logo.png" alt="" width="70" height="80">FORM</h1>
