--- a/formm.html
+++ b/formm.html
@@ -35,8 +35,8 @@
      @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap");
    </style>
 </head>
-<body>
-    <div class="container" style="background-color: rgb(182, 227, 236);">
+<body style="background-image:url('heeling.webp'); background-size:cover">
+    <div style="width: 30%; margin-left: 35%;">
         <div class="card text-center">
           <div class="card-body">
             <h1 class="card-title"><img src="logo.png" alt="" width="70" height="80">FORM</h1>
@@ -82,7 +82,7 @@
                   I am comfortable with both
                 </label>
               </div>
-                  <button
+              <button
                 type="button"
                 onclick="window.open('client.html')"
                 class="btn btn-lg btn-secondary"
