--- a/client.html
+++ b/client.html
@@ -101,7 +101,7 @@
           ></div>
           <div
             class="carousel-item"
-            style="background-image: url('mentalhealth.jpg')"
+            style="background-image: url('img.16.jpg')"
           ></div>
         </div>
         <a
