--- a/formm.html
+++ b/formm.html
@@ -37,7 +37,7 @@
 </head>
 <body style="background-image:url('heeling.webp'); background-size:cover">
     <div style="width: 30%; margin-left: 35%;">
-        <div class="card text-center">
+        <div class="card text">
           <div class="card-body">
             <h1 class="card-title"><img src="logo.png" alt="" width="70" height="80">FORM</h1>
             <form>
