--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body style="background-image:url('heeling.webp'); background-size:cover;">
+        <div class="container">
             <h1 style="color: white; background-color:  #012726;"><center>TESTIMONIALS </center></h1>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -34,6 +35,6 @@
               </div>
             </div>
         </div>
-
+        </div>
     </body>
   </html>
