--- a/art.html
+++ b/art.html
@@ -3,7 +3,7 @@
     <head>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-      <title>Bootstrap Example</title>
+      <title>article</title>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body style="background-image:url('heeling.webp'); background-size:cover;">
