--- a/about us.html
+++ b/about us.html
@@ -13,7 +13,7 @@
     <title>ABOUT us</title>
 </head>
 <body style="background-image: url('heeling.webp'); background-size:cover">
-  <h1 style="color: white; background-color:  #5e2a2a;"><center><img src="logo.png" alt="" width="70" height="80"> ABOUT US</center></h1>
+  <h1 style="color: white; background-color:  #12083b;"><center><img src="logo.png" alt="" width="70" height="80"> ABOUT US</center></h1>
   <div class="row">
   <div class="col" >
   <div class="card rounded" style="width: 30rem; background-color: rgb(73, 111, 143);">
