--- a/art.html
+++ b/art.html
@@ -3,12 +3,12 @@
     <head>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-      <title>article</title>
+      <title>Bootstrap Example</title>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body style="background-image:url('heeling.webp'); background-size:cover;">
     <div class="container">
-      <h1 style="color: white; background-color:  #5e2a2a;"><center> ARTICLES</center></h1>
+      <h1 style="color: white; background-color:#12083b;  "><center> ARTICLES</center></h1>
   
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
